zephyr: updating project to use v4.2.0

--- a/prj.conf
+++ b/prj.conf
@@ -22,8 +22,7 @@ CONFIG_FLASH_STM32_READOUT_PROTECTION=y
 CONFIG_LVGL=y
 CONFIG_LV_CONF_MINIMAL=y
 CONFIG_LV_USE_LABEL=y
-CONFIG_LV_USE_IMG=y
-CONFIG_LV_MEM_CUSTOM=y
+CONFIG_LV_USE_IMAGE=y
 CONFIG_LV_Z_MEM_POOL_SIZE=16384
 CONFIG_LV_Z_VDB_SIZE=4
 CONFIG_LV_Z_FLUSH_THREAD=y
@@ -36,7 +35,7 @@ CONFIG_LV_FONT_DEFAULT_MONTSERRAT_24=y
 CONFIG_LV_FONT_MONTSERRAT_48=y
 CONFIG_LV_USE_MENU=y
 CONFIG_LV_USE_FLEX=y
-CONFIG_LV_USE_BTN=y
+CONFIG_LV_USE_BUTTON=y
 
 # XBEE
 CONFIG_SERIAL=y
