lvgl: adding basic widgets examples

--- a/prj.conf
+++ b/prj.conf
@@ -20,9 +20,6 @@ CONFIG_FLASH_STM32_READOUT_PROTECTION=y
 
 # LVGL Settings
 CONFIG_LVGL=y
-CONFIG_LV_CONF_MINIMAL=y
-CONFIG_LV_USE_LABEL=y
-CONFIG_LV_USE_IMAGE=y
 CONFIG_LV_Z_MEM_POOL_SIZE=16384
 CONFIG_LV_Z_VDB_SIZE=4
 CONFIG_LV_Z_FLUSH_THREAD=y
@@ -33,9 +30,17 @@ CONFIG_LV_COLOR_DEPTH_16=y
 CONFIG_LV_COLOR_16_SWAP=y
 CONFIG_LV_FONT_DEFAULT_MONTSERRAT_24=y
 CONFIG_LV_FONT_MONTSERRAT_48=y
+CONFIG_LV_USE_LABEL=y
+CONFIG_LV_USE_IMAGE=y
 CONFIG_LV_USE_MENU=y
 CONFIG_LV_USE_FLEX=y
 CONFIG_LV_USE_BUTTON=y
+CONFIG_LV_USE_LED=y
+CONFIG_LV_USE_LINE=y
+CONFIG_LV_USE_BAR=y
+CONFIG_LV_USE_CANVAS=y
+CONFIG_LV_USE_CHART=y
+CONFIG_LV_USE_CHECKBOX=y
 
 # XBEE
 CONFIG_SERIAL=y
