--- a/prj.conf
+++ b/prj.conf
@@ -13,6 +13,7 @@ CONFIG_MIPI_DBI=y
 CONFIG_ST7789V=y
 CONFIG_INPUT=y
 CONFIG_INPUT_LONGPRESS=y
+CONFIG_SHELL=y
 
 CONFIG_SOC_FLASH_STM32=y
 CONFIG_FLASH_EX_OP_ENABLED=y
@@ -21,7 +22,7 @@ CONFIG_FLASH_STM32_READOUT_PROTECTION=y
 # LVGL Settings
 CONFIG_LVGL=y
 CONFIG_LV_Z_MEM_POOL_SIZE=16384
-CONFIG_LV_Z_VDB_SIZE=4
+CONFIG_LV_Z_VDB_SIZE=10
 CONFIG_LV_Z_FLUSH_THREAD=y
 
 CONFIG_MAIN_STACK_SIZE=8192
@@ -30,17 +31,31 @@ CONFIG_LV_COLOR_DEPTH_16=y
 CONFIG_LV_COLOR_16_SWAP=y
 CONFIG_LV_FONT_DEFAULT_MONTSERRAT_24=y
 CONFIG_LV_FONT_MONTSERRAT_48=y
-CONFIG_LV_USE_LABEL=y
-CONFIG_LV_USE_IMAGE=y
-CONFIG_LV_USE_MENU=y
-CONFIG_LV_USE_FLEX=y
-CONFIG_LV_USE_BUTTON=y
-CONFIG_LV_USE_LED=y
-CONFIG_LV_USE_LINE=y
+
+
+CONFIG_LV_USE_ANIMIMG=y
+CONFIG_LV_USE_ARC=y
 CONFIG_LV_USE_BAR=y
 CONFIG_LV_USE_CANVAS=y
 CONFIG_LV_USE_CHART=y
 CONFIG_LV_USE_CHECKBOX=y
+CONFIG_LV_USE_DROPDOWN=y
+CONFIG_LV_USE_LABEL=y
+CONFIG_LV_USE_LED=y
+CONFIG_LV_USE_LINE=y
+CONFIG_LV_USE_SPINBOX=y
+CONFIG_LV_USE_SPINNER=y
+CONFIG_LV_USE_SWITCH=y
+CONFIG_LV_USE_TABLE=y
+CONFIG_LV_USE_TABVIEW=y
+CONFIG_LV_USE_TILEVIEW=y
+CONFIG_LV_USE_WIN=y
+CONFIG_LV_USE_BUTTON=y
+
+CONFIG_LV_LOG_LEVEL_INFO=y
+CONFIG_LV_LOG_LEVEL_USER=y
+CONFIG_LV_LOG_PRINTF=y
+CONFIG_LV_USE_LOG=y
 
 # XBEE
 CONFIG_SERIAL=y
@@ -77,3 +92,7 @@ CONFIG_HFN_DEBUG_DEBOUNCE=y
 CONFIG_HFN_ZIGBEE_DEBUG_TX=n
 CONFIG_HFN_ZIGBEE_DEBUG_RX=n
 CONFIG_HFN_ENABLE_FLASH_READ_PROTECTION=y
+
+
+CONFIG_LOG=y
+CONFIG_LOG_DEFAULT_LEVEL=1
