display: changing hardware of display to use capacitive touch sensor

--- a/prj.conf
+++ b/prj.conf
@@ -13,7 +13,8 @@ CONFIG_MIPI_DBI=y
 CONFIG_ST7789V=y
 CONFIG_INPUT=y
 CONFIG_INPUT_LONGPRESS=y
-CONFIG_SHELL=y
+
+CONFIG_INPUT_FT5336_INTERRUPT=y
 
 CONFIG_SOC_FLASH_STM32=y
 CONFIG_FLASH_EX_OP_ENABLED=y
@@ -93,6 +94,10 @@ CONFIG_HFN_ZIGBEE_DEBUG_TX=n
 CONFIG_HFN_ZIGBEE_DEBUG_RX=n
 CONFIG_HFN_ENABLE_FLASH_READ_PROTECTION=y
 
+CONFIG_SHELL=y
+CONFIG_I2C_SHELL=y
 
+
+CONFIG_DEBUG=y
 CONFIG_LOG=y
 CONFIG_LOG_DEFAULT_LEVEL=1
